[package]
name = "flume"
version = "0.10.8"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
description = "A blazingly fast multi-producer channel"
repository = "https://github.com/zesterer/flume"
keywords = ["mpsc", "fifo", "channel", "thread", "mpmc"]
categories = ["concurrency", "data-structures"]
license = "Apache-2.0/MIT"
readme = "README.md"
exclude = [
    "/.github",
    "/misc",
]

[features]
select = []
async = ["futures-sink", "futures-core", "pin-project"]
eventual-fairness = ["async", "nanorand"]
default = ["async", "select", "eventual-fairness"]

[dependencies]
spin = { version = "0.9.2", features = ["mutex"] }
futures-sink = { version = "0.3", default_features = false, optional = true }
futures-core = { version = "0.3", default_features = false, optional = true }
nanorand = { version = "0.6", features = ["getrandom"], optional = true }
pin-project = { version = "1", optional = true }

[dev-dependencies]
#flume-test = { path = "../flume-test" }
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.3"
criterion = "0.3.4"
rand = "0.8.3"
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
futures = { version = "^0.3", features = ["std"] }
waker-fn = "1.1.0"

[[bench]]
name = "basic"
harness = false
